# dsi-capstone-spring-2025-TD-anti-money-laundering

./: .gitignore  README.md  eda.ipynb
Code/: README.md  pyproject.toml
Code/Abhitay/: vanilla-models-GNN-Arch1.ipynb  vanilla-models-GNN.ipynb  vanilla-models-RFC.ipynb
Code/Abhitay/IBM/: vanilla-models-GNN-Arch1.ipynb
Code/Abhitay/SAMLD/: vanilla-models-GNN-Arch1.ipynb
Code/Ernest/: notebook.ipynb  patterns.ipynb  requirements.txt
Code/notebooks/: Capstone_EDA.ipynb  example.ipynb
Code/notebooks/Colin/: notebook.ipynb
Code/notebooks/Ernest/: README.md  full.ipynb  gin.ipynb  isaacs.ipynb  multignn-clone.ipynb  multignn-modified.ipynb  notebook-1.ipynb  notebook.ipynb  notes.md  patterns.ipynb
Code/notebooks/Sophie/: README.md  catboost.ipynb  create_subgraph.ipynb  eda.ipynb  example_catboost.ipynb  example_gnn.ipynb  example_gnn_colab.ipynb  example_gnn_vscode.ipynb  ibm_eda.ipynb  notebook.ipynb  practice_gnn.ipynb  practice_gnn_colab.ipynb  practice_gnn_colab_416.ipynb  temporal_transformations.ipynb
Code/notebooks/Zoe/: Agg Features  - Subset.ipynb  Agggreated Features.ipynb  CatBoost.ipynb  Feature Selection.ipynb  Final Feature Selection.ipynb  Final Model.ipynb  XGBoost Demo.ipynb  XGboost.ipynb  eda.ipynb  xgboost_model.json
Code/src/explain/: __init__.py
Code/src/helpers/: __init__.py  currency.py  graph.py  notebook.py
Code/src/model/: __init__.py  features.py  gnn_model.py  gnn_trainer.py
Code/src/pipeline/: __init__.py  base.py  catboost.py  catboost_pipeline.py  checks.py  gnn.py  gnn_pipeline.py  reverse_mp_utils.py
(+39 files in other folders)
